pkgs/typed-racket-pkgs/typed-racket-tests/tests/typed-racket/fail/untyped-srfi1.rkt
#;
(exn-pred ".*untyped identifier map.*" ".*srfi.*")
#lang typed-scheme

(require srfi/1)

map
